// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FullHeightCard is rendered including some props 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  margin: 0;
  padding: 18px;
  padding-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  height: 100%;
}

<div
  className="CourseCard_Empty c0 c1"
  id="Test01"
>
  <div
    className="c2"
  />
</div>
`;

exports[`The FullHeightCard is rendered including the CardBanner and CardDetails components 1`] = `
.c3 {
  position: absolute;
  top: 8px;
  left: -8px;
  font-weight: 500;
  color: #fff;
  line-height: 16px;
  background-color: #a4286a;
  padding: 8px 16px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c4 {
  position: absolute;
  top: 40px;
  left: -8px;
  border-top: 8px solid #6c2548;
  border-left: 8px solid transparent;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 18px;
  padding-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  height: 100%;
}

.c10 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  cursor: pointer;
  color: #000;
  white-space: nowrap;
  display: block;
  border-radius: 4px;
  background-color: #fec228;
  padding: 12px 16px;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  font-size: inherit;
  margin-top: 24px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #000;
  background: #f2ae01;
}

.c11:active {
  position: relative;
  top: 2px;
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
}

.c9 {
  padding: 12px 16px;
  font-weight: bold;
}

.c8 {
  text-align: center;
}

.c7 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 300;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="CourseCard c0 c1"
  id="Test02"
>
  <a
    href="https://yoast.com/academy/keyword-research-training/"
  >
    <img
      alt="Keyword Research"
      className="c2"
      src="../wp-content/plugins/wordpress-seo/images/sample_course_card_header.png"
    />
  </a>
  <span
    className="c3"
  >
    Free trial available
  </span>
  <span
    className="c4"
  />
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <a
        className="c7"
        href="https://yoast.com/academy/keyword-research-training/"
      >
        Keyword Research
      </a>
      <p>
        Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.
      </p>
    </div>
    <div
      className="c8"
    >
      <a
        className="c9"
        href="https://yoast.com/academy/keyword-research-training/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Read more about this course
        <span
          className="c10"
        >
          (Opens in a new browser tab)
        </span>
      </a>
      <a
        className="c11"
        href="https://yoast.com/cart/?add-to-cart=1311259"
        rel="noopener noreferrer"
        target="_blank"
      >
        Get the full course
        <span
          className="c10"
        >
          (Opens in a new browser tab)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`The empty Card component matches the snapshot 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  margin: 0;
  padding: 18px;
  padding-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  id={null}
>
  <div
    className="c1"
  />
</div>
`;
